Refactor application configuration to use environment variables for better security and deployment flexibility. Moved all sensitive configuration values including database credentials, email settings, OAuth2 credentials, and Stripe API keys from application.properties to environment variables. Created comprehensive .env file template containing all required environment variables with their default values. Updated application.properties to reference environment variables without default values, ensuring all configuration must be explicitly provided through .env file or system environment variables. This change improves security by preventing sensitive data from being committed to version control, enables easier configuration management across different environments (development, staging, production), and follows twelve-factor app methodology for configuration management. The configuration now requires a properly configured .env file to run the application, making deployment more secure and environment-specific settings more manageable.